--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a mailer module for gitup",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint lib/*.js || true"
+    "test": "node test/*_test.js",
+    "lint": "eslint lib/*.js test/*.js || true"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/ifraixedes/gitup-mailer",
   "devDependencies": {
-    "eslint": "^0.13.0"
+    "eslint": "^0.13.0",
+    "tape": "^3.5.0"
   },
   "dependencies": {}
 }
